# repomix-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.agents/skills/ai-context-generator/: README.md  _meta.json  skill-card.md
.agents/skills/codegraph-skill/: SKILL.md
.agents/skills/litho-documents-skill/: SKILL.md  _meta.json  skill-card.md
.agents/skills/litho-documents-skill/references/: doc-templates.md  phase1-preprocessing.md  phase2-research.md  phase3-composition.md  phase4-output.md
.agents/skills/mind-mesh-knowledge-skill/: SKILL.md
.agents/skills/repomix-context-skill/: SKILL.md
.agents/skills/repomix-rs-explorer/: SKILL.md
.agents/skills/rtk-skill/: SKILL.md
.ai-context/: DYNAMICS.md  SKILL.md
.ai-context/meta/: MAINTENANCE.md
.ai-context/references/: ARCHITECTURE.md  DECISIONS.md  PROJECT-ESSENCE.md
.github/workflows/: ci.yml  release.yml
.mind-mesh/: index.md  project-note.md
.mind-mesh/.meta/: freshness.json
.mind-mesh/agent/: context-meta.json  context.md  meta-inputs-manifest.json  meta-inputs.md  meta.json  repomix.md
.mind-mesh/env/: manifest.json
.mind-mesh/human/: 1.概述.md  2.架构.md  3.工作流.md  5.边界接口.md  6.数据库概览.md
.mind-mesh/human/4.Deep-Exploration/: file.md  output.md  packager.md  security.md  tree_sitter.md
.mind-mesh/knowledge/: 1、业务术语.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  report.rs  run.rs  spinner.rs
crates/cli/src/prompts/: mod.rs
crates/cli/tests/: cli_smoke.rs
crates/config/: Cargo.toml
crates/config/src/: default_ignore.rs  global_dir.rs  lib.rs  load.rs  schema.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  packager.rs  path_util.rs  repomix-output.json  repomix-output.md  repomix-output.txt  repomix-output.xml
crates/core/src/file/: collect.rs  manipulate.rs  mod.rs  process.rs  process_content.rs  search.rs  tree_generate.rs  truncate_base64.rs  types.rs
crates/core/src/git/: diff.rs  log.rs  mod.rs  remote.rs  sort.rs
crates/core/src/metrics/: calculate.rs  mod.rs  token_count.rs
crates/core/src/output/: decorate.rs  generate.rs  mod.rs  split.rs
crates/core/src/output/styles/: json.rs  markdown.rs  mod.rs  plain.rs  xml.rs
crates/core/src/security/: mod.rs  repomix-output.xml  secretlint.rs  validate.rs
crates/core/src/tree_sitter/: compress.rs  languages.rs  mod.rs
crates/core/src/tree_sitter/queries/: c.scm  c_sharp.scm  cpp.scm  dart.scm  go.scm  java.scm  javascript.scm  kotlin.scm  php.scm  python.scm  ruby.scm  rust.scm  svelte.scm  swift.scm  typescript.scm  vue.scm
crates/core/tests/: integration_test.rs  new_languages_test.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: helpers.rs  lib.rs  output_path.rs  params.rs  server.rs
crates/mcp/src/tools/: mod.rs
crates/shared/: Cargo.toml  LICENSE-MIT
crates/shared/src/: lib.rs  logger.rs  pattern_utils.rs  types.rs
litho.docs/: 1.概述.md  2.架构.md  3.工作流.md  5.边界接口.md  6.数据库概览.md
litho.docs/Deep-Exploration/: compression.md  config.md  file-pipeline.md  git-ops.md  mcp-server.md  metrics.md  output.md  security.md
npm/repomix-rs/: package.json
npm/templates/: platform-package.json.tmpl
scripts/: README.md  check-npm-version.mjs  publish-crates.sh  publish-npm.mjs
