[package]
name = "repomix-config"
version = "2.0.1"
edition = "2024"
description = "Configuration management for repomix."
license = "MIT"

[dependencies]
repomix-shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
dirs = "5.0"
globset = "0.4"
ignore = "0.4"
