[package]
name = "repomix-core"
version = "0.1.0"
edition = "2024"

[dependencies]
repomix-shared = { path = "../shared" }
repomix-config = { path = "../config" }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
ignore = "0.4"
globset = "0.4"
chardetng = "0.1"
encoding_rs = "0.8"
tree-sitter = "0.24"
streaming-iterator = "0.1"
tiktoken-rs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tracing = "0.1"
walkdir = "2.4"
num_cpus = "1.16"
once_cell = "1.19"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
arboard = "3.3"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
# tree-sitter-c-sharp 0.23 的 ABI 与 queries/c_sharp.scm 不兼容，暂时移除依赖。
# 重新启用 C# 压缩时恢复该行。
# tree-sitter-c-sharp = "0.23"
