[package]
name = "repomix-mcp"
version = "2.0.1"
edition = "2024"
description = "MCP (Model Context Protocol) server for repomix."
license = "MIT"

[dependencies]
repomix-core = { path = "../core" }
repomix-config = { path = "../config" }
repomix-shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tracing = "0.1"
