[package]
name = "repomix-shared"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
chardetng = "0.1"
encoding_rs = "0.8"
arboard = "3.3"
indicatif = "0.17"
globset = "0.4"
